History of changes of the RapidMiner versions
====================================================

Changes from RapidMiner 5.2.6 to 5.2.7
--------------------------------------
* Send Mail operator has a new behavior: Stop process and show error if mail cannot be send
* Send Mail operator has a new parameter: 'Ignore errors'

Changes from RapidMiner 5.2.3 to 5.2.6
--------------------------------------
* Read SAS operator
* Added timezone parameter to Date to Nominal operator
* Excel 2007 support
* Dialog for editing cron expressions
* Dialog to see preview for regular expressions
* Update Database operator
* Easier mechanism for Extensions to create configurable items
* Japanese and German translation

Changes from RapidMiner 5.2.1 to 5.2.2
--------------------------------------
* Remove Correlated Attributes uses deterministic random numbers
* Improved Repository Tree handling (save expansion state on refresh and improved tree selection on entry removal)
* Improved exporting of Advanced Charts View

Changes from RapidMiner 5.2.0 to 5.2.1
--------------------------------------
* Added operators to manage repository entries: Copy, Move, Delete, Rename

Changes from RapidMiner 5.1 to 5.2
----------------------------------

* Added "Advanced Charts" view 
* Added "File" objects to pass to reader operators. 
  - Added operators to open files and URL connections
  - Added operators to iterate ZIP files
* Superset and Union operator can handle special attributes
* Catch block subprocess for Handle Exception operator
* Database connections can define driver properties 
* XML import
* Join operator can operate on multiple columns
* Easier bug reporting: Direct connection to Bugzilla
* Added new Operators:
  - Denormalization Operator
  - Remove Unused Values Operator
  - Loop Repository
  - Open File, Write File, Loop Zip-File Entries
  - Read Excel with Format