@@ -5,6 +5,7 @@ Changes from RapidMiner 5.2.6 to 5.2.7
 --------------------------------------
 * Send Mail operator has a new behavior: Stop process and show error if mail cannot be send
 * Send Mail operator has a new parameter: 'Ignore errors'
+* Write CSV operator has a new parameter: 'Append to file'
 
 Changes from RapidMiner 5.2.3 to 5.2.6
 --------------------------------------
